# VibeView

./: .gitignore  gradle.properties  settings.gradle.kts  vibe-compile.sh  vibe-init.sh  vibe-install.sh
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/potatameister/vibeview/: MainActivity.kt
vibe-watch/: Cargo.toml
vibe-watch/src/: main.rs
