[package]
name = "vibe-watch"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "6.1.1"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.80"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
colored = "2.1.0"
walkdir = "2.4.0"
